// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FooComponent should allow generating snapshot 1`] = `
<foo
  condition1="true"
  condition2="false"
  value1={[Function inputValueFn]}
  value2={[Function inputValueFn]}
>
  <p>
    Line 1
  </p><div
    id="foo"
  >
    <div>
       val1 
    </div>
  </div>
</foo>
`;

exports[`FooComponent should allow generating snapshot 2`] = `
<div>
  <p>
    Line 1
  </p>
  <div
    id="foo"
  >
    <div>
       val1 
    </div>
    
    
  </div>
</div>
`;

exports[`FooComponent should allow generating snapshot with removed component attributes with snapshot serializer option 1`] = `
<foo>
  <p>
    Line 1
  </p><div
    id="foo"
  >
    <div>
       val1 
    </div>
  </div>
</foo>
`;

exports[`FooComponent should allow generating snapshot with removed component attributes with snapshot serializer option 2`] = `
<div>
  <p>
    Line 1
  </p>
  <div
    id="foo"
  >
    <div>
       val1 
    </div>
    
    
  </div>
</div>
`;
